# hvb_firmware

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTEXT.md  Kconfig  README.md  UBIQUITOUS_LANGUAGE.md  west.yml
cmake/: fw_version.cmake  (+1 more)
tools/: CMakeLists.txt  CMakePresets.json  deploy_linux.sh  deploy_windows.sh  ui_scheam.yml
tools/board_test/: README.md  board_test.sh  factory_bringup.sh
tools/cmake/: tool_version.cmake  tool_version.h.in  toolchain-mingw64.cmake
tools/dac_sweep_test/: README.md  dac_sweep_test.sh
tools/dac_sweep_test/tests/: mock_hvb_demo_cli.sh  test_dac_sweep_test.sh
tools/factory/: README.md
tools/factory/01_flash/: flash.sh
tools/factory/02_bringup/: factory_bringup.sh
tools/factory/03_feature_test/: README.md  board_test.sh
tools/factory/04_stress_test/: stress_test.py  stress_test_native.sh
tools/factory/05_sweep_test/: README.md  dac_sweep_test.sh
tools/factory/05_sweep_test/tests/: mock_psb_demo_cli.sh  test_dac_sweep_test.sh
tools/factory/06_self_cal/jw_hvb/: README.md  jw_hvb_selfcal.py
tools/factory/06_self_cal/jw_lvb/: README.md  jw_lvb_calibrate.py
tools/hvb_demo_app/: CMakeLists.txt  README.md  deploy_linux.sh  deploy_windows.sh
tools/hvb_demo_app/cli/: CMakeLists.txt  main.cpp
tools/hvb_demo_app/gui/: CMakeLists.txt  main.cpp  modbus_backend.cpp  modbus_backend.h  modbus_worker.cpp  modbus_worker.h
tools/hvb_demo_app/gui/qml/: ChannelTab.qml  ConnectionBar.qml  ConnectionModal.qml  HvbTheme.qml  MonitorTab.qml  SysConfigDialog.qml  SystemConfigTab.qml  Theme.qml  main.qml
tools/hvb_demo_app/tui/: CMakeLists.txt  main.cpp  modbus_settings.h  tab_channel.h  tab_monitor.h  tab_system.h  tui_format.h  tui_policy.h  widgets.h
tools/hvb_factory_tool/gui/: CMakeLists.txt  CalibrationBackend.cpp  CalibrationBackend.h  CalibrationWorker.cpp  CalibrationWorker.h  ReportData.h  ReportEngine.cpp  ReportEngine.h  SweepData.cpp  SweepData.h  TestEngine.cpp  TestEngine.h  TestResult.h  main.cpp
tools/hvb_factory_tool/gui/qml/: MainWindow.qml  ReportPage.qml  WorkModeSidebar.qml
tools/hvb_factory_tool/repl/: CMakeLists.txt  FactoryCommands.cpp  FactoryCommands.h  FactorySession.cpp  FactorySession.h  main.cpp
tools/hvb_modbus_core/: CMakeLists.txt  config_manager.cpp  config_manager.h  hvb_modbus_client.cpp  hvb_modbus_client.h  monitor_render.cpp  register_map.h  register_meta.cpp  register_meta.h  types.h
tools/hvb_modbus_core/tests/: CMakeLists.txt  test_calibration.cpp  test_channel_reads.cpp  test_connection.cpp  test_enum_validation.cpp  test_error_handling.cpp  test_monitor_output.cpp  test_register_meta.cpp  test_system_reads.cpp  test_tui_format.cpp  test_tui_modbus_settings.cpp  test_tui_policy.cpp  test_writes.cpp  virtual_board.cpp  virtual_board.h
tools/jw_hvb_selfcal/: README.md  jw_hvb_selfcal.py  requirements.txt
tools/jw_lvb_calib/: README.md  jw_lvb_calibrate.py
tools/modbus_debug_tool/: CMakeLists.txt  CMakePresets.json  README.md  deploy_linux.sh  deploy_windows.sh  run_tests.sh
tools/modbus_debug_tool/cli/: CMakeLists.txt  main.cpp
tools/modbus_debug_tool/core/: CMakeLists.txt  hvb_modbus_client.cpp  hvb_modbus_client.h  monitor_render.cpp  register_map.h  register_meta.cpp  types.h
tools/modbus_debug_tool/deploy/hvb_modbus_tool-ef2b9ad-dirty-linux-x86_64/: hvb_tui  hvbctrl
tools/modbus_debug_tool/docs/plans/: 2026-06-16-hvb-tui-redesign.md
tools/modbus_debug_tool/gui/: CMakeLists.txt  main.cpp  modbus_backend.h
tools/modbus_debug_tool/tests/: CMakeLists.txt  cli_crosscheck.sh  cli_run_all.sh  test_enum_validation.cpp  test_system_reads.cpp  test_tui_format.cpp  test_writes.cpp  virtual_board.cpp
tools/modbus_debug_tool/tui/: CMakeLists.txt  main.cpp  tab_channel.h  tab_monitor.h  tab_system.h  widgets.h
tools/psb_demo_app/: CMakeLists.txt  README.md
tools/psb_demo_app/cli/: CMakeLists.txt  main.cpp
tools/psb_demo_app/gui/: CMakeLists.txt  main.cpp  modbus_backend.cpp  modbus_backend.h  modbus_worker.cpp  modbus_worker.h
tools/psb_demo_app/tui/: CMakeLists.txt  app_window_layout.h  board_dashboard.h  board_session.h  board_switcher.h  channel_live_layout.h  group_alias_status.h  group_monitor.h  group_view_selection.h  group_wizard_screen.h  group_wizard_state.h  main.cpp  modbus_settings.h  mode_select.h  preferences_dialog.h  tab_channel.h  tab_monitor.h  tab_system.h  topology_path_picker.h  tui_format.h  tui_policy.h  tui_style.h  widgets.h  wizard_scan.h  wizard_screen.h  wizard_state.h
tools/psb_factory_tool/: CMakeLists.txt
tools/psb_factory_tool/gui/: CMakeLists.txt  CalibrationBackend.cpp  CalibrationBackend.h  CalibrationWorker.cpp  CalibrationWorker.h  ReportData.h  ReportEngine.cpp  SweepData.cpp  TestEngine.cpp  main.cpp
tools/psb_factory_tool/repl/: CMakeLists.txt  FactoryCommands.cpp  FactoryCommands.h  FactorySession.cpp  FactorySession.h
tools/psb_modbus_core/: CMakeLists.txt  app_preferences.cpp  app_preferences.h  board_catalog.h  channel_policy.h  config_manager.cpp  config_manager.h  message_log.cpp  message_log.h  monitor_render.cpp  platform_paths.cpp  platform_paths.h  psb_board_session.cpp  psb_board_session.h  psb_modbus_client.cpp  psb_modbus_client.h  psb_serial_bus.cpp  psb_serial_bus.h  register_map.h  register_meta.cpp  register_meta.h  topology_config.cpp  topology_config.h  topology_rules.cpp  topology_rules.h  types.h
tools/psb_modbus_core/tests/: CMakeLists.txt  test_app_preferences.cpp  test_board_session.cpp  test_calibration.cpp  test_channel_reads.cpp  test_connection.cpp  test_enum_validation.cpp  test_error_handling.cpp  test_group_wizard_state.cpp  test_message_log.cpp  test_monitor_output.cpp  test_register_meta.cpp  test_serial_bus.cpp  test_system_reads.cpp  test_topology_config.cpp  test_topology_rules.cpp  test_tui_format.cpp  test_tui_modbus_settings.cpp  test_tui_policy.cpp  test_tui_widgets.cpp  test_wizard_scan.cpp  test_wizard_state.cpp  test_writes.cpp  virtual_board.cpp  virtual_board.h
tools/shared_qml/: HvbTheme.qml  qmldir
tools/stress_test/: stress_test.py  stress_test_native.sh
(+442 files in other folders)
